...

        <RelativeLayout
            android:id="@+id/ride_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/btn_fare_split"
                        style="@style/BorderLessButton"
                        android:layout_width="@dimen/zero_width"
...
                        android:drawablePadding="@dimen/btn_drawable_driver_details_padding"
                        android:drawableTop="@drawable/ic_split_fare"
                        android:text="@string/btn_split_fare"
                        android:textAllCaps="false"
                        android:textColor="@color/charcoal_grey_state"
...

                    <ImageView
                        android:id="@+id/driver_image"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
...

                                <TextView
                                    android:id="@+id/tv_driver_rate"
                                    style="@style/RATextView.MontserratRegular"
                                    android:layout_width="45dp"
...

                        <TextView
                            android:id="@+id/tv_driver_name"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="wrap_content"
...

                    <ImageView
                        android:id="@+id/car_image"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
...

                            <TextView
                                android:id="@+id/car_plate"
                                style="@style/RATextView.MontserratRegular"
                                android:layout_width="70dp"
...

                        <TextView
                            android:id="@+id/car_color_make_model"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/car_category"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="wrap_content"
...

                <ImageView
                    android:id="@+id/driver_image_small"
                    android:layout_width="@dimen/driver_avatar_in_ride_big_version_size"
                    android:layout_height="@dimen/driver_avatar_in_ride_big_version_size"
...

                        <TextView
                            android:id="@+id/driver_rate_small"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="50dp"
...

                        <TextView
                            android:id="@+id/driver_name_small"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="match_parent"
...

                        <TextView
                            android:id="@+id/car_category_small"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="match_parent"
...

                        <TextView
                            android:id="@+id/car_make_small"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="match_parent"
...

                        <TextView
                            android:id="@+id/car_plate_small"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="match_parent"
...
