...
                android:layout_marginBottom="1dp"
                android:text="@string/connection_problems"
                android:visibility="@{!mapModel.hasServerConnection}"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/prevRide"
                style="@style/RATextView.Inactive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="@color/drawer_icon"
                android:gravity="center"
                android:text="@string/stacked_ride_prev_ride"
                android:textSize="@dimen/regular_text_size"
                android:visibility="@{mapModel.showPrevRide}"
                android:alpha="@{mapModel.controlsAlpha}"
                tools:visibility="visible"/>

            <LinearLayout
...
