...
    <string name="connection_problems">Poor connectivity. Verify cell reception</string>

    <string name="masked_credit_card_number">**** **** **** %1$s</string>
    <string name="ride_active">You have an active ride.</string>

    <string name="no_mins">-- min</string>
    <string name="zero_mins">&lt;1 min</string>
    <string name="one_min">1 min</string>
    <string name="many_mins">%d mins</string>
    <plurals name="minutes_plural">
        <item quantity="one">@string/one_min</item>
        <item quantity="other">@string/many_mins</item>
    </plurals>
...
