...
        <LinearLayout
            style="@style/LinearLayout.Base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_phone_number"
                style="@style/RATextView.MontserratLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="34dp"
...
                android:background="@drawable/bg_text_input_round"
                android:selectAllOnFocus="true"
                android:textSize="14sp"
                android:text="@={viewModel.phone}"/>

            <Button
                android:id="@+id/btn_send"
                style="@style/Button.RoundedGreyButton"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="50dp"
                android:layout_height="42dp"
                android:enabled="@{viewModel.enableSendButton}"
...
