...
            android:id="@+id/inactive_warning"
            style="@style/RATextView.Inactive"
            android:text="@string/inactive_warning"
            android:visibility="gone" />

        <TextView
            android:id="@+id/error_panel"
            style="@style/RATextView.Inactive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/connection_problems"
            android:visibility="@{!mapModel.hasServerConnection}"
...
